--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@ title: Home
 <section class="recent-posts">
 
     <div class="section-title">
-
-        <h2><span>All Stories</span></h2>
-
+        <h2><span>Todas as artigos</span></h2>
     </div>
 
     <div class="row listrecent">
@@ -58,4 +56,3 @@ title: Home
     {% include pagination.html %}
 </span>
 </div>
-
