feat: altera título do site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: Engenheiro de Software
 ---
 
 {% if page.url == "/" %}
@@ -8,21 +8,21 @@ title: Home
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
+
     <div class="section-title">
         <h2><span>Destaque</span></h2>
     </div>
+
     <div class="row">
+        {% for post in site.posts %}
 
-    {% for post in site.posts %}
+            {% if post.featured == true %}
 
-        {% if post.featured == true %}
+                {% include featuredbox.html %}
 
-            {% include featuredbox.html %}
+            {% endif %}
 
-        {% endif %}
-
-    {% endfor %}
-
+        {% endfor %}
     </div>
 </section>
 
@@ -33,26 +33,28 @@ title: Home
 <section class="recent-posts">
 
     <div class="section-title">
-        <h2><span>Todas as artigos</span></h2>
+        <h2><span>Todas os artigos</span></h2>
     </div>
 
     <div class="row listrecent">
-
         {% for post in paginator.posts %}
 
         {% include postbox.html %}
 
         {% endfor %}
-
     </div>
 
 </section>
 
 <!-- Pagination
 ================================================== -->
+
 <div class="bottompagination">
-<div class="pointerup"><i class="fa fa-caret-up"></i></div>
-<span class="navigation" role="navigation">
-    {% include pagination.html %}
-</span>
+    <div class="pointerup">
+        <i class="fa fa-caret-up"></i>
+    </div>
+    
+    <span class="navigation" role="navigation">
+        {% include pagination.html %}
+    </span>
 </div>
