feat: altera título do site

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ title: Engenheiro de Software
 
 <!-- Featured
 ================================================== -->
-<section class="featured-posts">
-
+<section class="featured-posts" style="margin-top: 1em">
+    
     <div class="section-title">
         <h2><span>Destaque</span></h2>
     </div>
