feat: altera título do site

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Engenheiro de Software
 <section class="recent-posts">
 
     <div class="section-title">
-        <h2><span>Todas os artigos</span></h2>
+        <h2><span>Outros artigos</span></h2>
     </div>
 
     <div class="row listrecent">
